Fixing menu responsiveness on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -226,6 +226,7 @@ hr {
 
 .close-icon[data-state="visible"] {
   display: block;
+  cursor: pointer;
   color: white;
   font-size: 24px;
 }
@@ -262,7 +263,7 @@ hr {
   list-style-type: none;
   margin: 5px;
   padding: 0;
-  margin-top: 10%;
+  margin-top: 50px;
 }
 
 @media screen and (min-width: 900px) {
@@ -432,27 +433,35 @@ hr {
   border: none;
   margin-top: 1em;
   padding: 12rem;
+  cursor: pointer;
 }
 
 .website {
   background: url(./assets/code_500x500.png) no-repeat;
   background-position: center;
-  filter: brightness(30%);
 }
 
 .quantum_lamps {
   background: url(./assets/quantum_lamps_500x500.png) no-repeat;
   background-position: center;
-  filter: brightness(50%);
-}
-
-.project:hover {
-  filter: brightness(100%);
-  cursor: pointer;
-  background-color: var(--project-hover-color);
 }
 
 .project__text {
   text-align: center;
   font-size: 24px;
+}
+
+@media screen and (min-width: 900px) {
+  .quantum_lamps {
+    filter: brightness(50%);
+  }
+
+  .website {
+    filter: brightness(30%);
+  }
+
+  .project:hover {
+    filter: brightness(100%);
+    background-color: var(--project-hover-color);
+  }
 }
